crash: Add unit tests for kernel_log_collector.sh
Roughly as requested in https://crrev.com/c/5554965. Adds tests for
kernel_log_collector.sh

Using a C++ wrapper for testing because initially I couldn't figure out
how to get a shell-based test to run (it took a full build-packages
after adding to the ebuild, which I didn't expect), and anyway I think
it's a little nicer this way.

BUG=b:341971605
TEST=cros_sdk -- cros_workon_make -breven chromeos-base/crash-reporter \
        --test

Change-Id: I7c08f7a183f08c6801f84272bcdd13b4a9335982
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5637955
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Tested-by: Ted Brandston <tbrandston@google.com>
Commit-Queue: Ted Brandston <tbrandston@google.com>

--- a/crash-reporter/BUILD.gn
+++ b/crash-reporter/BUILD.gn
@@ -495,6 +495,7 @@ if (use.test) {
       "gsc_collector_test.cc",
       "kernel_collector_test.cc",
       "kernel_collector_test.h",
+      "kernel_log_collector_test.cc",
       "kernel_util_test.cc",
       "kernel_warning_collector_test.cc",
       "metric_utils_test.cc",
