vm_tools: Share host's /usr/local/bin/strace with ARCVM
BUG=b:345371219
TEST=adb shell exec-cros-binary /var/run/arc/ro/usr/local/bin/strace

Change-Id: Ie183774246517d1688151b6fa9b93541c2e56474
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5628432
Commit-Queue: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -159,6 +159,9 @@ script
     if [ -d "/usr/local/lib64" ]; then
       set -- "$@" -b /usr/local/lib64,/run/arcvm/ro/usr/local/lib64
     fi
+    if [ -f "/usr/local/bin/strace" ]; then
+      set -- "$@" -b /usr/local/bin/strace,/run/arcvm/ro/usr/local/bin/strace
+    fi
     if [ -f "/usr/local/bin/stress-ng" ]; then
       set -- "$@" -b /usr/local/bin/stress-ng,/run/arcvm/ro/usr/local/bin/stress-ng
     fi
