--- a/dns-proxy/BUILD.gn
+++ b/dns-proxy/BUILD.gn
@@ -167,7 +167,7 @@ if (use.test) {
     deps = [
       ":libdnsproxy",
       "//common-mk/testrunner:testrunner",
-      "//net-base:net_base_test_support",
     ]
+    pkg_deps = [ "libnet-base-test" ]
   }
 }
