shill: Use libnet-base-test in BUILD.gn
BUG=b:346465934
TEST=CQ

Change-Id: Ia1703a505156032beab7bb7f98b8fdd50e6b7857
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5628095
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -688,6 +688,7 @@ if (use.test) {
       "libbrillo-test",
       "libchrome-test",
       "libminijail",
+      "libnet-base-test",
     ]
   }
 
@@ -913,7 +914,6 @@ if (use.test) {
       ":mobile_operator_db-db",
       ":mobile_operator_db-test-db",
       "//metrics:metrics_test_support",
-      "//net-base:net_base_test_support",
     ]
 
     if (use.vpn) {
