shill: Use net-base headers in /usr/include/chromeos
Missed a few items in the previous patch.

BUG=b:346465934
TEST=FEATURES="test" emerge-$BOARD shill

Change-Id: Iae8e7c647b230d9b0c18fbdc875640bc7c65d293
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5633056
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>

--- a/shill/mojom/type_mappings.json
+++ b/shill/mojom/type_mappings.json
@@ -10,7 +10,7 @@
       "nullable_is_same_type": true,
       "non_const_ref": false,
       "public_headers": [
-        "net-base/http_url.h"
+        "chromeos/net-base/http_url.h"
       ],
       "traits_headers": [
         "shill/mojom/url/mojom/url_mojom_traits.h"
