biod: updater: Add support for test firmware
Test firmware provides the same functionalities as the production
firmware but it may contain some unstable changes.

To enable testing firmware, create '.use_test_firmware' in
/var/lib/bio_fw_updater.

Name of the file with testing firmware must have the same format as
production one. The file must be placed in /opt/google/biod/fw/test/.

BUG=b:347224521
TEST=FEATURES=test emerge-zork biod
TEST=1. Deploy biod on a DUT and reboot.
     2. Confirm that the log contains information that update is not
	necessary.
     3. 'touch /var/lib/bio_fw_updater/.use_test_firmware' and reboot
     4. Make sure that the log contains information that test
	firmware is used and there is no directory.
     5. 'mkdir /opt/google/biod/fw/test', copy firmware to the
	directory and reboot.
     6. Make sure the updater flashed test firmware.
     7. Remove '.use_test_firmware' and reboot.
     8. Make sure the updater flashed production firmware.

Change-Id: I0cdce98370b4cddb0596eff14b87dc9b3cb8d581
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5630693
Tested-by: Patryk Duda <patrykd@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Patryk Duda <patrykd@google.com>

--- a/biod/BUILD.gn
+++ b/biod/BUILD.gn
@@ -85,6 +85,7 @@ static_library("libbiod") {
     "session_state_manager.cc",
     "uinput_device.cc",
     "updater/cros_fp_updater.cc",
+    "updater/firmware_selector.cc",
     "updater/update_utils.cc",
     "utils.cc",
   ]
@@ -191,6 +192,7 @@ if (use.test) {
       "session_state_manager_test.cc",
       "session_test.cc",
       "updater/cros_fp_updater_test.cc",
+      "updater/firmware_selector_test.cc",
       "updater/update_utils_test.cc",
       "utils_test.cc",
     ]
