rmad: Read SKU filter from /etc/rmad
Read optional SKU filter textproto file from /etc/rmad to filter SKUs
and override their descriptions. The prototext file can come from other
packages such as rmad-config-${model} in the private overlay.

BUG=b:349029809
TEST=FEATURES=test emerge-dedede rmad

Change-Id: I44c1bc46dc4b4f18b5ab02b59c6829632e446680
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5645281
Commit-Queue: Cheng-Han Yang <chenghan@chromium.org>
Tested-by: Cheng-Han Yang <chenghan@chromium.org>
Reviewed-by: Jeff Lin <jeffulin@google.com>

--- a/rmad/state_handler/BUILD.gn
+++ b/rmad/state_handler/BUILD.gn
@@ -44,6 +44,7 @@ source_set("libstate_handler") {
   deps = [
     "//rmad/logs:liblogs",
     "//rmad/metrics:libmetrics",
+    "//rmad/proto:rmad-protos",
     "//rmad/segmentation:libsegmentation",
     "//rmad/system:libsystem",
     "//rmad/udev:libudev",
