--- a/rmad/proto/BUILD.gn
+++ b/rmad/proto/BUILD.gn
@@ -7,5 +7,8 @@ import("//common-mk/proto_library.gni")
 proto_library("rmad-protos") {
   proto_in_dir = "."
   proto_out_dir = "include/rmad"
-  sources = [ "${proto_in_dir}/feature_enabled_devices.proto" ]
+  sources = [
+    "${proto_in_dir}/feature_enabled_devices.proto",
+    "${proto_in_dir}/sku_filter.proto",
+  ]
 }
