libpmt: add the decoder interface
Add the pmt::PmtDecoder class handling PMT sample decoding based on the
metadata XML files present in the system.

BUG=b:344846601
TEST=FEATURES="test" emerge-rex chromeos-base/libpmt

Change-Id: Icc697d27864b7b75cdc02186b51a78df7ec64e11
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5631287
Tested-by: Stanisław Kardach <skardach@google.com>
Reviewed-by: Puthikorn Voravootivat <puthik@chromium.org>
Reviewed-by: Marcin Wojtas <mwojtas@google.com>
Reviewed-by: Miguel Quintero <miguelquintero@google.com>
Commit-Queue: Stanisław Kardach <skardach@google.com>

--- a/libpmt/BUILD.gn
+++ b/libpmt/BUILD.gn
@@ -23,6 +23,7 @@ pkg_config("target_defaults_pkg_deps") {
     "libbrillo",
     "libxml-2.0",
     "protobuf",
+    "re2",
   ]
 }
 
@@ -40,7 +41,10 @@ proto_library("pmt_data_proto") {
 shared_library("libpmt") {
   sources = [
     "pmt_collector.cc",
+    "pmt_decoder.cc",
     "pmt_impl.cc",
+    "pmt_metadata.cc",
+    "xml_helper.cc",
   ]
   configs += [ ":target_defaults_pkg_deps" ]
   install_path = "lib"
@@ -52,6 +56,7 @@ install_config("install_libpmt_headers") {
     "bits",
     "pmt.h",
     "pmt_collector.h",
+    "pmt_decoder.h",
   ]
   install_path = "/usr/include/libpmt"
   recursive = true
