shill: add the DHCPCDProxy class
This CL adds the DHCPCDProxy class as the proxy of the dhcpcd 10. Note
that in this CL the class only initiates the dhcpcd process. The
interaction between shill and the dhcpcd process is not implemented yet.

BUG=b:347847601
TEST=FEATURES=test emerge-nissa shill

Change-Id: If1a74d24f5cdcd86a67a8b19b3cddc5f59b4d77b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5632867
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -333,6 +333,7 @@ static_library("libshill") {
     "network/connection_diagnostics.cc",
     "network/dhcp_client_proxy.cc",
     "network/dhcp_controller.cc",
+    "network/dhcpcd_proxy.cc",
     "network/dhcpv4_config.cc",
     "network/icmp_session.cc",
     "network/legacy_dhcpcd/legacy_dhcpcd_listener.cc",
@@ -789,6 +790,7 @@ if (use.test) {
       "network/compound_network_config_test.cc",
       "network/connection_diagnostics_test.cc",
       "network/dhcp_controller_test.cc",
+      "network/dhcpcd_proxy_test.cc",
       "network/dhcpv4_config_test.cc",
       "network/icmp_session_test.cc",
       "network/legacy_dhcpcd/legacy_dhcpcd_listener_test.cc",
