diagnostics: Collect routine v2 creation usage via UMA
Collect UMA for usage analysis.

BUG=b:280403522
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ie1fa70deda06ad75f827f19964306ac4152f30cc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5638435
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Denny Huang <dennyh@google.com>

--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -11,6 +11,7 @@ source_set("routines") {
     "libchrome",
     "libmojo",
   ]
+  pkg_deps = [ "libmetrics" ]
   public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
   deps = [
     ":utils",
@@ -29,6 +30,7 @@ source_set("routines") {
     "//diagnostics/cros_healthd/routines/sensor",
     "//diagnostics/cros_healthd/routines/storage",
     "//diagnostics/cros_healthd/system",
+    "//diagnostics/cros_healthd/utils",
   ]
 }
 
