--- a/shill/mojom/type_mappings.json
+++ b/shill/mojom/type_mappings.json
@@ -1,5 +1,22 @@
 {
   "c++": {
+    "chromeos.connectivity.mojom.NotificationEvent": {
+      "copyable_pass_by_value": true,
+      "default_constructible": true,
+      "force_serialize": false,
+      "forward_declaration": null,
+      "hashable": false,
+      "move_only": false,
+      "nullable_is_same_type": false,
+      "non_const_ref": false,
+      "public_headers": [
+        "shill/network/portal_notification_event.h"
+      ],
+      "traits_headers": [
+        "shill/mojom/shill/mojom/portal_notification_event_mojom_traits.h"
+      ],
+      "typename": "::shill::PortalNotificationEvent"
+    },
     "url.mojom.Url": {
       "copyable_pass_by_value": false,
       "default_constructible": true,
