cryptohome: Remove --no_downloads_bind_mount command line option
BUG=b:328506748
TEST=cros_workon_make --board=$BOARD --test chromeos-base/cryptohome

Cq-Depend: chromium:5642017
Change-Id: Ia90b321baa03d84da2a81d190477b4342d86cb19
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5641859
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Tested-by: François Degros <fdegros@chromium.org>
Commit-Queue: François Degros <fdegros@chromium.org>

--- a/cryptohome/init/cryptohomed.conf
+++ b/cryptohome/init/cryptohomed.conf
@@ -23,7 +23,6 @@ env DIRENCRYPTION_FLAG=""
 env FSCRYPT_V2_FLAG=""
 env DISTRIBUTED_MODE_FLAG=""
 env NO_LEGACY_MOUNT_FLAG=""
-env NO_DOWNLOAD_BINDMOUNT_FLAG=""
 env APPLICATION_CONTAINERS=""
 
 # Directory to store ephemeral cryptohome underlying sparse file.
@@ -51,7 +50,7 @@ script
   # Note that cat is not used here to prevent confusing upstart's fork
   # tracking.
   set -- "$@" --noclose ${DIRENCRYPTION_FLAG} ${DISTRIBUTED_MODE_FLAG} \
-    ${NO_LEGACY_MOUNT_FLAG} ${NO_DOWNLOAD_BINDMOUNT_FLAG} ${FSCRYPT_V2_FLAG} \
+    ${NO_LEGACY_MOUNT_FLAG} ${FSCRYPT_V2_FLAG} \
     ${APPLICATION_CONTAINERS} --vmodule="${VMODULE_ARG}" ${CRYPTOHOMED_ARGS}
   exec cryptohomed "$@"
 end script
