metrics: Revert "metrics: Support structured metrics in metrics_client"
This reverts commit 865a932f4423a49279f912d62066b610397a8f2c.

Reason for revert: Seccomp policy that this use-case is using is causing crashes. See b/347598257.

Original change's description:
> metrics: Support structured metrics in metrics_client
>
> Allow metrics_client to output structured metrics by doing, say:
>
> metrics_client --structured CrashReporting CrashReporterStatus \
> --Status=0 --Collector=5 --IsCrashLoop=0
>
> BUG=b:339322520
> Fixed: b:339322520
> TEST=Ran metrics_client --structured CrashReporting CrashReporterStatus --Status=401 --Collector=8 --IsCrashLoop=0
> Got "EventsProto {StructuredEventProto {
> event_name_hash:1308528214212923902 event_type:REGULAR
> project_name_hash:13615523565054809415
> Metric {name_hash:17029140179819671253 value_int64:401}
> Metric {name_hash:10359177269713898166 value_int64:8}
> Metric {name_hash:1930484523447744031 value_int64:0}}" on Chrome side
> TEST=Confirmed metrics_client -c still worked
> TEST=Confirmed metrics_client -W <file> -n 5 Platform.AnyCrashesDaily 5 1 100 50 still worked
> TEST=Confirmed metrics_client -v SessionManager.SafeModeEnabled still worked
>
> Cq-Depend:5531374
> Change-Id: Ib59e1f356c6adf207c781d128db0e9e05d13bf83
> Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531131
> Commit-Queue: Ian Barkley-Yeung <iby@chromium.org>
> Reviewed-by: Jong Ahn <jongahn@chromium.org>
> Reviewed-by: Andrew Bregger <andrewbregger@google.com>
> Tested-by: Ian Barkley-Yeung <iby@chromium.org>

BUG=b:339322520,b:347598257
TEST=Manual. Reverting a CL causing crashes.

Cq-Depend: 5646425
Change-Id: I785cd3994d13da7b62f4b3335c03b05db53a2da4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5646123
Tested-by: Jong Ahn <jongahn@chromium.org>
Commit-Queue: Jong Ahn <jongahn@chromium.org>
Reviewed-by: Andrew Bregger <andrewbregger@google.com>

--- a/metrics/BUILD.gn
+++ b/metrics/BUILD.gn
@@ -27,13 +27,11 @@ group("all") {
     deps += [
       ":cumulative_metrics_test",
       ":debugd_reader_test",
-      ":metrics_client_util_test",
       ":metrics_library_test",
       ":mmc_error_parser_test",
       ":persistent_integer_test",
       ":timer_test",
       ":upload_service_test",
-      "//metrics/structured:metrics_client_structured_metrics_test",
       "//metrics/structured:structured_metrics_test",
     ]
   }
@@ -51,11 +49,6 @@ group("all") {
 install_config("install_minijail_conf") {
   sources = [ "minijail/metrics_daemon.conf" ]
   install_path = "minijail_conf"
-}
-
-static_library("metric_client_util") {
-  sources = [ "metrics_client_util.cc" ]
-  configs += [ ":target_defaults" ]
 }
 
 shared_library("libmetrics") {
@@ -132,12 +125,7 @@ static_library("libmetrics_daemon") {
 executable("metrics_client") {
   sources = [ "metrics_client.cc" ]
   configs += [ ":target_defaults" ]
-  deps = [
-    ":libmetrics",
-    ":metric_client_util",
-    "//metrics/structured:libmetricsclientstructuredmetrics",
-    "//metrics/structured:libstructuredmetrics",
-  ]
+  deps = [ ":libmetrics" ]
 }
 
 static_library("libupload_service") {
@@ -221,17 +209,6 @@ if (use.test) {
     configs += [
       "//common-mk:test",
       ":target_defaults",
-    ]
-  }
-  executable("metrics_client_util_test") {
-    sources = [ "metrics_client_util_test.cc" ]
-    configs += [
-      "//common-mk:test",
-      ":target_defaults",
-    ]
-    deps = [
-      ":metric_client_util",
-      "//common-mk/testrunner:testrunner",
     ]
   }
   executable("metrics_library_test") {
