rmad: Move proto/ to a top-level directory
Create a top-level directory to put rmad-specific protobuf definitions.
This makes it easier to add more protobuf in the future.

BUG=b:349029809
TEST=emerge-dedede rmad

Change-Id: I215786ea9f64b9f564944cf41019ac850123c89c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5645280
Tested-by: Cheng-Han Yang <chenghan@chromium.org>
Reviewed-by: Jeff Lin <jeffulin@google.com>
Commit-Queue: Cheng-Han Yang <chenghan@chromium.org>

--- a/rmad/segmentation/BUILD.gn
+++ b/rmad/segmentation/BUILD.gn
@@ -18,7 +18,7 @@ source_set("libsegmentation") {
   ]
   configs += [ ":target_defaults" ]
   deps = [
-    "proto:feature_enabled_devices-protos",
+    "//rmad/proto:rmad-protos",
     "//rmad/system:libsystem",
     "//rmad/utils:libutils",
   ]
