--- a/rmad/proto/BUILD.gn
+++ b/rmad/proto/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//common-mk/proto_library.gni")
 
-proto_library("feature_enabled_devices-protos") {
+proto_library("rmad-protos") {
   proto_in_dir = "."
   proto_out_dir = "include/rmad"
   sources = [ "${proto_in_dir}/feature_enabled_devices.proto" ]
