shill: add shill's Manager API to receive the events from dhcpcd
This CL adds a D-Bus method NotifyDHCPEvent for shill's Manager. It's
used to let dhcpcd sends the DHCP events with configuration to shill.

BUG=b:347847601
TEST=FEATURES=test emerge-nissa shill
TEST=run the following command and check shill get the map:
$ minijail0 -u dhcp -g dhcp -G -c \
    cap_net_bind_service,cap_net_broadcast,cap_net_admin,cap_net_raw=e \
    /usr/bin/dbus-send --system --fixed --print-reply \
      --dest=org.chromium.flimflam / \
      org.chromium.flimflam.Manager.NotifyDHCPEvent \
      dict:string:string:"one","1","two","2"

Change-Id: Ibee7b83622c882c90884fc90d29b98f9df99ed38
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5644583
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/shims/org.chromium.flimflam.conf
+++ b/shill/shims/org.chromium.flimflam.conf
@@ -240,6 +240,9 @@
     </policy>
     <policy user="dhcp">
         <allow send_destination="org.chromium.flimflam"/>
+        <allow send_destination="org.chromium.flimflam"
+               send_interface="org.chromium.flimflam.Manager"
+               send_member="NotifyDHCPEvent"/>
         <deny send_destination="org.chromium.flimflam"
               send_interface="org.chromium.flimflam.Service"
               send_member="GetWiFiPassphrase"/>
