adbd: Disable DbC when adb debugging disabled
When DbC is enabled on a USB bus, it polls continually, looking for
new connections. Currently DbC is only used for ADB debugging on
ChromeOS. This patch disables DbC when ADB debugging is disabled
to prevent needless polling and energy consumption.

BUG=b:121287022
TEST=Check the status of the DbC entry when ADB is en/disabled:
  Enable ADB toggle:
  cat /sys/bus/pci/devices/$DEVICE_ID/dbc
  enabled
  (or configured)

  Disable ADB toggle:
  cat /sys/bus/pci/devices/$DEVICE_ID/dbc
  disabled

  $DEVICE_ID is the USB bus id. For brya/volteer: 0000:00:0d.0

Change-Id: Iac82e13f6e78d620756151e94871b1aac65dfefd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5646488
Reviewed-by: Emilie Roberts <hadrosaur@google.com>
Commit-Queue: Emilie Roberts <hadrosaur@google.com>
Tested-by: Emilie Roberts <hadrosaur@google.com>
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>

--- a/arc/adbd/init/arcvm-adbd.conf
+++ b/arc/adbd/init/arcvm-adbd.conf
@@ -156,6 +156,20 @@ post-stop script
     echo "Post-stop arcvm-adbd"
     set +e -x
 
+    # Disable DbC.
+    if [ $(grep -ic '"adbOverDbcSupport":[^"]*true' ${CONFIG}) -ge 1 ]; then
+      DEVICE_ID=$(
+        grep -o '"pciBusDeviceId": "[^"]*' ${CONFIG} | grep -o '[^"]*$')
+
+      # Disable DbC.
+      if [ $(cat /sys/devices/pci0000:00/$DEVICE_ID/dbc) = "enabled" ] || \
+        [ $(cat /sys/devices/pci0000:00/$DEVICE_ID/dbc) = "configured" ]
+      then
+        logger -t "${UPSTART_JOB}" "About to disable dbc on ${DEVICE_ID}."
+        echo disable > /sys/devices/pci0000:00/$DEVICE_ID/dbc
+      fi
+    fi
+
     # Perform best-effort unmounting of the bulk endpoints.
     umount --lazy "${RUNTIME_DIR}"/ep1
     umount --lazy "${RUNTIME_DIR}"/ep2
