--- a/arc/adbd/init/arcvm-adbd.conf
+++ b/arc/adbd/init/arcvm-adbd.conf
@@ -75,6 +75,9 @@ pre-start script
     # Fetch USB-C PCI bus id from adb config file.
     DEVICE_ID=$(grep -o '"pciBusDeviceId": "[^"]*' ${CONFIG} | grep -o '[^"]*$')
 
+    # Increase DbC poll timeout to prevent unnecessary polling
+    echo "2500" > /sys/bus/pci/drivers/xhci_hcd/$DEVICE_ID/dbc_poll_interval_ms
+
     # Write Google Vendor ID to DbC device if no yet set.
     GOOGLE_VENDOR_ID="18d1"
     DBC_VENDOR_ID="$(cat /sys/bus/pci/devices/$DEVICE_ID/dbc_idVendor)"
