common-mk: Pass -Bsymbolic-non-weak
-Bsymbolic resolve symbols found in the same shared object at build
time, instead of load time (during dynamic linking). On low end devices,
this speeds up boot by up to 4%.

We only apply it to non-weak symbols because weak symbols are commonly
used for C++ vague linkage / ODR.

The caveat is that symbols cannot be interposed (overridden by another
module), but usually libc is the only library people are interested in
interposing and we don't apply this to libc.

For more details, see go/cros-symbol-slimming (internal only).

BUG=b:343093715
TEST=CQ

Cq-Depend: 5683222
Change-Id: Iaed137acff4779b7e883e7fd11b36f12c95ab262
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5653470
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: George Burgess <gbiv@chromium.org>
Tested-by: Tatsuyuki Ishi <ishitatsuyuki@google.com>
Commit-Queue: Tatsuyuki Ishi <ishitatsuyuki@google.com>

--- a/common-mk/BUILD.gn
+++ b/common-mk/BUILD.gn
@@ -99,6 +99,11 @@ config("compiler_defaults") {
               "-Wl,-z,noexecstack",
               "-Wl,-z,now",
               "-Wl,--as-needed",
+
+              # Pass -Bsymbolic-non-weak which pre-binds symbols in the same
+              # DSO to improve startup performance. We don't support
+              # interposing non-weak symbols. (go/cros-symbol-slimming)
+              "-Wl,-Bsymbolic-non-weak",
             ]
   if (link_stdcppfs) {
     libs += [ "stdc++fs" ]
