adbd: Disable DbC on USB-C bus when no typec cables present
When DbC is enabled on a USB bus, it polls continually, looking for
new connections. Currently DbC is only used for ADB debugging on
ChromeOS. This patch disables DbC when ADB debugging when no
typec cables are connected to prevent needless polling and energy
consumption.

When the first cable is attached, enable DbC.

To determine when the first cable is attached / last cable is
removed, this uses a simple counting mechanism, looking for
portX-partner events on the bus configured in /etc/arc/adbd.json.

BUG=b:121287022
TEST=Check the status of the DbC entry when ADB is en/disabled:
  No cable (including typec power cables):
  cat /sys/bus/pci/devices/$DEVICE_ID/dbc
  disabled

  Plug in cable:
  cat /sys/bus/pci/devices/$DEVICE_ID/dbc
  enabled
  (or configured)

  Remove cable:
  cat /sys/bus/pci/devices/$DEVICE_ID/dbc
  disabled

  $DEVICE_ID is the USB bus id. For brya/volteer: 0000:00:0d.0

Change-Id: I301e3f7f4f74f08c47d80e0179c85e879e4cf18b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5654290
Reviewed-by: Emilie Roberts <hadrosaur@google.com>
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Commit-Queue: Emilie Roberts <hadrosaur@google.com>
Tested-by: Emilie Roberts <hadrosaur@google.com>

--- a/arc/adbd/init/arcvm-adbd.conf
+++ b/arc/adbd/init/arcvm-adbd.conf
@@ -83,12 +83,6 @@ pre-start script
       echo disable > /sys/bus/pci/devices/$DEVICE_ID/dbc
       echo "0x$GOOGLE_VENDOR_ID" > /sys/bus/pci/devices/$DEVICE_ID/dbc_idVendor
     fi
-
-    # Enable DbC if needed.
-    if [ $(cat /sys/bus/pci/devices/$DEVICE_ID/dbc) = "disabled" ]; then
-      logger -t "${UPSTART_JOB}" "About to enable dbc on ${DEVICE_ID}."
-      echo enable > /sys/bus/pci/devices/$DEVICE_ID/dbc
-    fi
   fi
 end script
 
@@ -121,10 +115,15 @@ script
 
   # DbC-specific configuration.
   if [ $(grep -ic '"adbOverDbcSupport":[^"]*true' ${CONFIG}) -ge 1 ]; then
+    DEVICE_ID=$(grep -o '"pciBusDeviceId": "[^"]*' ${CONFIG} | grep -o '[^"]*$')
+
     # For DbC, need write permissions for usb role.
     for f in $(find /sys/class/usb_role -type l -exec readlink -f {} +); do
       args="${args} -b $f/role,,1";
     done;
+
+    # Write permissions for udev to access the dbc control file
+    args="${args} -b /sys/devices/pci0000:00/$DEVICE_ID/dbc,,1"
 
     # For accessing DbC device node.
     args="${args} -b /dev/dbc,/dev/dbc"
