shill: add the dhcpcd hook
This CL installs the customized dhcpcd hook that notifies shill the DHCP
events.

BUG=b:347847601
TEST=emerge-nissa shill and
     confirm 00-send-event-to-shill.sh is installed at
     /lib/dhcpcd/dhcpcd-hooks
TEST=./shill/dhcpcd-hook/00-send-event-to-shill-test.sh

Change-Id: I7494f0cdefe210877980e9e2fdc2518614a29854
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5655590
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -20,6 +20,7 @@ group("all") {
     ":openvpn-script",
     ":shill",
     ":shill-chromeos-dbus-adaptors",
+    "//shill/dhcpcd-hook",
   ]
   if (use.cellular) {
     deps += [ ":cellular_mobile_operator_info_tester" ]
