modemfwd: add AsyncModemFlasher
This takes ownership of a ModemFlasher and then runs all
of its methods on a different thread, so as to avoid
blocking the main thread.

BUG=b:315488486
TEST=unit tests

Change-Id: Ib5b00a69b08a22de8bed967f4c98abfa83683d12
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5653065
Tested-by: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Ujjwal Pande <ujjwalpande@google.com>
Commit-Queue: Eric Caruso <ejcaruso@chromium.org>

--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -64,6 +64,7 @@ generate_dbus_adaptors("modemfwd_adaptors") {
 
 static_library("libmodemfw") {
   sources = [
+    "async_modem_flasher.cc",
     "daemon_task.cc",
     "dlc_manager.cc",
     "error.cc",
@@ -128,6 +129,7 @@ install_config("install_minijail_config") {
 if (use.test) {
   executable("modemfw_test") {
     sources = [
+      "async_modem_flasher_test.cc",
       "daemon_task_test.cc",
       "dlc_manager_test.cc",
       "error_test.cc",
