biod: Introduce BiodFeature class
The BiodFeature class is responsible for checking status of feature
flags and applying changes if some flag changes.

Currently, this class is checking CrOSLateBootAllowFpmcuBetaFirmware
only. If the flag is enabled, this class will enable beta firmware.

BUG=b:347224521
TEST=FEATURES=test emerge-zork biod

Cq-Depend: chromium:5670362
Change-Id: I1cf32139fd308e2b5c8daacf67f6db3c21481da1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5659621
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Patryk Duda <patrykd@google.com>
Tested-by: Patryk Duda <patrykd@google.com>

--- a/biod/BUILD.gn
+++ b/biod/BUILD.gn
@@ -64,6 +64,7 @@ static_library("libbiod") {
     "auth_stack_manager_wrapper.cc",
     "biod_config.cc",
     "biod_crypto.cc",
+    "biod_feature.cc",
     "biod_metrics.cc",
     "biod_storage.cc",
     "biod_system.cc",
@@ -91,7 +92,10 @@ static_library("libbiod") {
   ]
   configs += [ ":target_defaults" ]
   libs = [ "hwsec" ]
-  pkg_deps = [ "vboot_host" ]
+  pkg_deps = [
+    "libfeatures",
+    "vboot_host",
+  ]
 }
 
 static_library("fake_libbiod") {
@@ -173,6 +177,7 @@ if (use.test) {
       "auth_stack_manager_wrapper_test.cc",
       "biod_config_test.cc",
       "biod_crypto_test.cc",
+      "biod_feature_test.cc",
       "biod_metrics_test.cc",
       "biod_storage_test.cc",
       "biod_system_test.cc",
@@ -207,7 +212,10 @@ if (use.test) {
       ":libbiod",
       "//common-mk/testrunner",
     ]
-    pkg_deps = [ "dbus-1" ]
+    pkg_deps = [
+      "dbus-1",
+      "libfake_platform_features",
+    ]
   }
 }
 
