--- a/biod/study/analysis-tool/requirements.txt
+++ b/biod/study/analysis-tool/requirements.txt
@@ -11,6 +11,7 @@
 # $ pip install 'plotly>=5.8.0' kaleido nbformat
 # $ pip install djlint
 # $ pip install jinja2 requests
+# $ pip install tomli
 # $ pip3 freeze
 # Remove indirect packages.
 
@@ -27,4 +28,5 @@ pandas==2.2.2
 plotly==5.22.0
 requests==2.31.0
 scipy==1.13.0
+tomli==2.0.1
 tqdm==4.66.4
