diagnostics: Print logs for dropped http(s)_firewall callbacks
Print more logs to troubleshoot the timeout issue.

BUG=b:335367556
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ifd967ed37534dc9a251be72677d007f2ce37373c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5669881
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/routines/network/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/network/BUILD.gn
@@ -3,7 +3,10 @@
 # found in the LICENSE file.
 
 pkg_config("network_pkg_config") {
-  pkg_deps = [ "libchrome" ]
+  pkg_deps = [
+    "libchrome",
+    "libmojo",
+  ]
 }
 
 source_set("network") {
