camera: Run kiosk vision inference in stream manipulator
This CL implements the main inference loop for the kiosk vision
feature. Stream manipulator creates and inits a pipeline, feeds
YUV frames as input.

BUG=b:339396282
TEST=USE="camera_feature_kiosk_vision" emerge-hatch cros-camera-libs

Change-Id: I607fd48953fa09ca314295f01e63e712f9d26431
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5667301
Tested-by: Sergii Bykov <sbykov@google.com>
Reviewed-by: Irina Fedorova <irfedorova@google.com>
Reviewed-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Sergii Bykov <sbykov@google.com>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -557,10 +557,7 @@ if (use.test) {
 
   if (use.camera_feature_kiosk_vision) {
     executable("cros_kiosk_vision_sm_tests") {
-      sources = [
-        "//camera/features/kiosk_vision/kiosk_vision_stream_manipulator.cc",
-        "//camera/features/kiosk_vision/tests/kiosk_vision_stream_manipulator_test.cc",
-      ]
+      sources = [ "//camera/features/kiosk_vision/tests/kiosk_vision_stream_manipulator_test.cc" ]
       configs += [
         "//common-mk:test",
         "//camera/features/kiosk_vision:target_defaults",
@@ -570,6 +567,7 @@ if (use.test) {
         "//camera/common:base",
         "//camera/common:libcros_camera",
         "//camera/common:libcros_camera_mojom",
+        "//camera/features/kiosk_vision",
         "//common-mk/testrunner:testrunner",
       ]
     }
