minios: skip log fetching when booting from usb
Skip searching for logs if root device is removable.

BUG=b:339392695
TEST=Ran on brya dut from disk and usb

Change-Id: I2019fba157b8e682ad874d42986157f3d15edd97
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5663925
Auto-Submit: Saketh Pothireddy <spothire@google.com>
Tested-by: Saketh Pothireddy <spothire@google.com>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/minios/init/minios_util_logs.conf
+++ b/minios/init/minios_util_logs.conf
@@ -16,6 +16,16 @@ oom score -100
 
 tmpfiles /usr/lib/tmpfiles.d/on-demand/minios_util.conf
 
+pre-start script
+    . /usr/share/misc/chromeos-common.sh
+    . /usr/sbin/write_gpt.sh
+    load_base_vars
+    if rootdev_removable; then
+        stop
+        exit 0
+    fi
+end script
+
 exec minijail0 --config /usr/share/minijail/minios_util.conf \
     -- /usr/bin/minios_util --retrieve=/var/log/minios \
     --erase --clear_key
