diagnostics: Update storage telemetry for flex device filtering
Update the logic for detecting device purpose by looking for boot
device through `purpose` field.

Add new field `is_rotational` to determine whether the boot device is
a spinning disk.

See detailed design doc here:
go/flex-storage-telem

BUG=b:336238542, b:351706854
TEST=(shell) FEATURES=test P2_TEST_FILTER='*' emerge-jacuzzi diagnostics
     (DUT) cros-health-tool telem --category=storage

Cq-Depend: 5677699
Change-Id: I32fd6225fe6a8a901296923c7b9c8355420901b8
Disallow-Recycled-Builds: test-failures
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5660002
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Tested-by: Ethan Cheng <yycheng@google.com>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Ethan Cheng <yycheng@google.com>

--- a/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
+++ b/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
@@ -35,7 +35,10 @@ source_set("storage_data_source") {
 if (use.test) {
   source_set("storage_data_source_test") {
     configs += [ ":storage_data_source_common_pkg_deps" ]
-    deps = [ ":storage_data_source" ]
+    deps = [
+      ":storage_data_source",
+      "//diagnostics/base:test_support",
+    ]
     sources = [
       "device_info_test.cc",
       "device_lister_test.cc",
