common-mk: Pass -fvisibility-inlines-hidden
Investigation has showed that symbol resolution has non-negligible cost
during startup due to the large symbol footprint of C++ libraries.  In
addition to class hided by the current -fvisibility=hidden default,
-fvisibility-inlines-hidden hides inline member functions in exported
classes as well. On low end devices, this speeds up boot by around 0.5%.

The caveat of this option is that inline functions will no longer have a
stable address across shared libraries. In practice, this is not relied
upon. inline static variables still have unique addresses even with this
option, and code that rely on that (e.g. some typeinfo implementations)
will continue to work.

For more details, see go/cros-symbol-slimming (internal only).

BUG=b:343093715
TEST=CQ

Change-Id: I21f6ead86b35bed53a5b0f4b1e9683db89ba4940
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5660196
Tested-by: Tatsuyuki Ishi <ishitatsuyuki@google.com>
Reviewed-by: Allen Webb <allenwebb@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Tatsuyuki Ishi <ishitatsuyuki@google.com>

--- a/common-mk/BUILD.gn
+++ b/common-mk/BUILD.gn
@@ -79,7 +79,14 @@ config("compiler_defaults") {
     "-ggdb3",
     "-fstack-protector-strong",
     "-Wformat=2",
+
+    # When a class is exported through __attribute__((visibility("default"))),
+    # we still want to eliminate symbols from inline class member functions to
+    # reduce symbol resolution overhead. Therefore, pass
+    # -fvisibility-inlines-hidden in addition to -fvisibility=internal.
+    # (go/cros-symbol-slimming)
     "-fvisibility=internal",
+    "-fvisibility-inlines-hidden",
     "-Wa,--noexecstack",
     "-Wimplicit-fallthrough",
   ]
