odml: Add ml_core/dlc_client to handle DLC
BUG=b:350812364
TEST=Run odmld & odml_console manually

Change-Id: I9d69866117561d935f6cea1aee2da6f15f6b1d92
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5677953
Commit-Queue: Yi Chou <yich@google.com>
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Tested-by: Yi Chou <yich@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -19,6 +19,7 @@ pkg_config("target_defaults") {
     "absl",
     "libbrillo",
     "libchrome",
+    "libdlcservice-client",
     "libmetrics",
     "mojo_service_manager",
     "protobuf-lite",
@@ -73,7 +74,10 @@ source_set("odml") {
     "on_device_model/platform_model_loader_chromeos.cc",
     "on_device_model/public/cpp/model_assets.cc",
   ]
-  public_deps = [ ":mojo_bindings_lib" ]
+  public_deps = [
+    ":mojo_bindings_lib",
+    "//ml_core/dlc:dlc_client",
+  ]
   configs += [ ":target_defaults" ]
 }
 
