odml: Load the shim from DLC
The size shim lib is a little bit too big to fit in the rootfs, so we
will need to load it from the DLC.

BUG=b:350812364
TEST=Run the odmld with the odml_shim DLC

Change-Id: I259a9028086096fe7074e9ef368d09eef19a320f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5678462
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Commit-Queue: Yi Chou <yich@google.com>
Tested-by: Yi Chou <yich@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -73,6 +73,7 @@ source_set("odml") {
     "on_device_model/on_device_model_service.cc",
     "on_device_model/platform_model_loader_chromeos.cc",
     "on_device_model/public/cpp/model_assets.cc",
+    "utils/odml_shim_loader_impl.cc",
   ]
   public_deps = [
     ":mojo_bindings_lib",
