diagnostics: Add callback drop handler in camera frame analysis routine
Add the callback drop handler to prevent the routine from timeout in
case the mojo disconnects.

BUG=b:342285680
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ic1b113cb651cd1d9c13b157be6c3514f1aa60435
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5675234
Reviewed-by: Kerker Yang <kerker@chromium.org>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/routines/camera/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/camera/BUILD.gn
@@ -12,7 +12,10 @@ source_set("camera") {
     "libcros_camera",
     "mojo_service_manager",
   ]
-  pkg_deps = [ "system_api" ]
+  pkg_deps = [
+    "libmojo",
+    "system_api",
+  ]
   public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/cros_healthd/system",
