diagnostics: support non-broker to non-broker connection for ipcz
As part of the effort of bringing ipcz to ChromeOS, we need to
support a few instances in which processes that are non-brokers
connect to each other.

To do that, ipcz requires using invitation flags defined upstream in
https://crrev.com/c/4554178 to support this use case.

BUG=b:41494930
TEST=CQ

Change-Id: I364492cad9a890554d9fdee45efb9585317e42ba
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5678343
Tested-by: Andrea Orru <andreaorru@chromium.org>
Commit-Queue: Andrea Orru <andreaorru@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>

--- a/diagnostics/cros_healthd/delegate/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/BUILD.gn
@@ -46,6 +46,10 @@ executable("delegate") {
   ]
   install_path = "/usr/libexec/diagnostics"
   deps = [ ":libexecutor_delegate" ]
+
+  if (use.ipcz) {
+    defines = [ "USE_IPCZ=${use.ipcz}" ]
+  }
 }
 
 if (use.test) {
