--- a/diagnostics/cros_healthd/executor/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/executor/utils/BUILD.gn
@@ -24,6 +24,10 @@ source_set("utils") {
   ]
   public_deps = [ "//diagnostics/cros_healthd/mojom" ]
   deps = [ "//diagnostics/base" ]
+
+  if (use.ipcz) {
+    defines = [ "USE_IPCZ=${use.ipcz}" ]
+  }
 }
 
 if (use.test) {
